# brain-spi

./: .gitignore  02_pictures.ipynb  PLAN.md  README.md  pyproject.toml
brain_spi/: __init__.py  _utils.py  aggregate.py  config.py  domains.py  pipeline.py  spis.py  stats.py  viz.py
brain_spi/configs/: spis_default.yaml
examples/: abide_cobre_quickstart.ipynb  colab_quickstart.ipynb  datasets.py  fbirn_quickstart.ipynb
src/: load_data.py
tests/: conftest.py  test_aggregate.py  test_pipeline_smoke.py  test_stats.py  test_viz.py
