[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-spi"
version = "0.1.1"
description = "SPI connectivity-analysis pipeline for fMRI group comparisons"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pavel Popov", email = "kapssula@gmail.com" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "pyspi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mpl",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["brain_spi*"]

[tool.setuptools.package-data]
brain_spi = ["configs/*.yaml"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
ignore_missing_imports = true
